--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,6 +28,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://za.chari.as" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  zachasme
 
+permalink: /:year/:month/:day/:title:output_ext
 markdown: CommonMarkGhPages
 commonmark:
   options: ["UNSAFE", "SMART", "FOOTNOTES"]
